- Cleaned project and reduced boilerplate code - Added visual hopper connections - Added Hopper connection mode widget - Added mod counter to "nearby" widget - Fixed a bug. /fahndung now works correctly