@@ -27,7 +27,7 @@ public class AutoDecomp {
     public void onKeyEvent(KeyEvent event) {
         if(Key.ESCAPE.isPressed() && autoDecompActive) {
             stopDecomp();
-        } else if (VersionisedBridge.allKeysPressed(Addon.getSharedInstance().configuration().getAutoCrafterConfig().getAutoDecompHotkey().get())) {
+        } else if (VersionisedBridge.getSharedInstance().allKeysPressed(Addon.getSharedInstance().configuration().getAutoCrafterConfig().getAutoDecompHotkey().get())) {
             startDecomp();
             Addon.getSharedInstance().displayNotification(I18n.getTranslation("tmbgriefergames.autoDecomp.started"));
         }
@@ -52,9 +52,9 @@ public class AutoDecomp {
 
             if (ClickManager.getSharedInstance().isClickQueueEmpty(QueueType.MEDIUM)) {
                 if (compItem == null) {
-                    if (!Minecraft.getMinecraft().player.inventory.mainInventory.get(0).isEmpty()) {
-                        compItem = Minecraft.getMinecraft().player.inventory.mainInventory.get(0).getItem();
-                        compSubID = Minecraft.getMinecraft().player.inventory.mainInventory.get(0).getMetadata();
+                    if (!Minecraft.getMinecraft().player.inventory.mainInventory.getFirst().isEmpty()) {
+                        compItem = Minecraft.getMinecraft().player.inventory.mainInventory.getFirst().getItem();
+                        compSubID = Minecraft.getMinecraft().player.inventory.mainInventory.getFirst().getMetadata();
                     }
                 } else {
                     //Do Decomp
@@ -231,23 +231,15 @@ public class AutoDecomp {
     }
 
     private String getRomanianNumberForInt(int number) {
-        switch (number) {
-            case 1:
-                return "I";
-            case 2:
-                return "II";
-            case 3:
-                return "III";
-            case 4:
-                return "IV";
-            case 5:
-                return "V";
-            case 6:
-                return "VI";
-            case 7:
-                return "VII";
-            default:
-                return "";
-        }
+        return switch (number) {
+            case 1 -> "I";
+            case 2 -> "II";
+            case 3 -> "III";
+            case 4 -> "IV";
+            case 5 -> "V";
+            case 6 -> "VI";
+            case 7 -> "VII";
+            default -> "";
+        };
     }
 }
